feat: 增加README & 修改触发命令

--- a/package.json
+++ b/package.json
@@ -10,15 +10,15 @@
     "Other"
   ],
   "activationEvents": [
-    "onCommand:whateat.helloWorld",
+    "onCommand:whateat.todayeat",
     "*"
   ],
   "main": "./dist/extension.js",
   "contributes": {
     "commands": [
       {
-        "command": "whateat.helloWorld",
-        "title": "Hello World"
+        "command": "whateat.todayeat",
+        "title": "今天吃点啥"
       }
     ],
     "configuration": {
